Add movie and category api
