# src/main/java/vn/cmax/cafe/api/models/Movie.java
@@ -1,0 +1,129 @@
+package vn.cmax.cafe.api.models;
+
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import io.swagger.v3.oas.annotations.media.Schema;
+import java.io.Serializable;
+import org.springframework.validation.annotation.Validated;
+import javax.validation.Valid;
+import javax.validation.constraints.*;
+
+/**
+ * Movie
+ */
+@Validated
+
+
+public class Movie  implements Serializable  {
+  private static final long serialVersionUID = 1L;
+
+  @JsonProperty("name")
+  private Object name = null;
+
+  @JsonProperty("duration")
+  private Integer duration = null;
+
+  @JsonProperty("description")
+  private String description = null;
+
+  public Movie name(Object name) {
+    this.name = name;
+    return this;
+  }
+
+  /**
+   * Get name
+   * @return name
+   **/
+  @Schema(description = "")
+  
+    public Object getName() {
+    return name;
+  }
+
+  public void setName(Object name) {
+    this.name = name;
+  }
+
+  public Movie duration(Integer duration) {
+    this.duration = duration;
+    return this;
+  }
+
+  /**
+   * Get duration
+   * @return duration
+   **/
+  @Schema(description = "")
+  
+    public Integer getDuration() {
+    return duration;
+  }
+
+  public void setDuration(Integer duration) {
+    this.duration = duration;
+  }
+
+  public Movie description(String description) {
+    this.description = description;
+    return this;
+  }
+
+  /**
+   * Get description
+   * @return description
+   **/
+  @Schema(description = "")
+  
+    public String getDescription() {
+    return description;
+  }
+
+  public void setDescription(String description) {
+    this.description = description;
+  }
+
+
+  @Override
+  public boolean equals(java.lang.Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    Movie movie = (Movie) o;
+    return Objects.equals(this.name, movie.name) &&
+        Objects.equals(this.duration, movie.duration) &&
+        Objects.equals(this.description, movie.description);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(name, duration, description);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class Movie {\n");
+    
+    sb.append("    name: ").append(toIndentedString(name)).append("\n");
+    sb.append("    duration: ").append(toIndentedString(duration)).append("\n");
+    sb.append("    description: ").append(toIndentedString(description)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(java.lang.Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
